Fixed z-index for mobile nav issue with flash messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -214,7 +214,9 @@ nav .fa {
 
 	nav ul {
 		position: static;
-        background: $charcoal;
+    background: $charcoal;
+    position: relative;
+    z-index: 999;
 	}
 
 	nav li{
